After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 671390 - 1.31.20 tarball doesn't build
1.31.20 tarball doesn't build
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
1.31.x
Other Linux
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2012-03-05 16:38 UTC by Vincent Untz
Modified: 2012-03-05 17:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
object: Fix build (996 bytes, patch)
2012-03-05 16:41 UTC, Vincent Untz
reviewed Details | Review
object: Fix build with systemtap (1011 bytes, patch)
2012-03-05 16:54 UTC, Vincent Untz
committed Details | Review

Description Vincent Untz 2012-03-05 16:38:26 UTC
Trying to update the openSUSE package, the build fails with:


#       source='gi/object.c' object='libgjs_la-object.lo' libtool=yes 
/bin/sh ./libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I.   -pthread -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gobject-introspection-1.0 -I/usr/include/js -I/usr/include/nspr4   -DGJS_TOP_SRCDIR=\".\" -DGJS_JS_DIR=\"/usr/share/gjs-1.0\" -DGJS_NATIVE_DIR=\"/usr/lib/gjs-1.0\" -DPKGLIBDIR=\"/usr/lib/gjs\" -I./gi -DGJS_COMPILATION   -Wnested-externs -Wmissing-prototypes -Wsign-compare -Wcast-align -Wpointer-arith -Wmissing-declarations -Wchar-subscripts -fomit-frame-pointer -fmessage-length=0 -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector -funwind-tables -fasynchronous-unwind-tables -g -c -o libgjs_la-object.lo `test -f 'gi/object.c' || echo './'`gi/object.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -pthread -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gobject-introspection-1.0 -I/usr/include/js -I/usr/include/nspr4 -DGJS_TOP_SRCDIR=\".\" -DGJS_JS_DIR=\"/usr/share/gjs-1.0\" -DGJS_NATIVE_DIR=\"/usr/lib/gjs-1.0\" -DPKGLIBDIR=\"/usr/lib/gjs\" -I./gi -DGJS_COMPILATION -Wnested-externs -Wmissing-prototypes -Wsign-compare -Wcast-align -Wpointer-arith -Wmissing-declarations -Wchar-subscripts -fomit-frame-pointer -fmessage-length=0 -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector -funwind-tables -fasynchronous-unwind-tables -g -c gi/object.c  -fPIC -DPIC -o .libs/libgjs_la-object.o
\
#       source='gi/foreign.c' object='libgjs_la-foreign.lo' libtool=yes 
gi/object.c: In function 'object_instance_finalize':
gi/object.c:1028:5: error: expected ':' before ')' token/bin/sh ./libtool  --tag=CC   --mode=compile gcc -DHAVE_CONFIG_H -I.   -pthread -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/gobject-introspection-1.0 -I/usr/include/js -I/usr/include/nspr4   -DGJS_TOP_SRCDIR=\".\" -DGJS_JS_DIR=\"/usr/share/gjs-1.0\" -DGJS_NATIVE_DIR=\"/usr/lib/gjs-1.0\" -DPKGLIBDIR=\"/usr/lib/gjs\" -I./gi -DGJS_COMPILATION   -Wnested-externs -Wmissing-prototypes -Wsign-compare -Wcast-align -Wpointer-arith -Wmissing-declarations -Wchar-subscripts -fomit-frame-pointer -fmessage-length=0 -O2 -Wall -D_FORTIFY_SOURCE=2 -fstack-protector -funwind-tables -fasynchronous-unwind-tables -g -c -o libgjs_la-foreign.lo `test -f 'gi/foreign.c' || echo './'`gi/foreign.c

gi/object.c:1028:5: error: expected ':' before ')' token
gi/object.c:1028:5: error: first argument to '__builtin_choose_expr' not a constant
gi/object.c:1028:5: error: expected ':' before ')' token
gi/object.c:1028:5: error: expected ':' before ')' token
gi/object.c:1028:5: error: first argument to '__builtin_choose_expr' not a constant
gi/object.c:1028:5: error: expected ':' before ')' token
gi/object.c:1028:5: error: expected ':' before ')' token
gi/object.c:1028:5: error: expected ';' before ':' token
make[1]: *** [libgjs_la-object.lo] Error 1
make[1]: *** Waiting for unfinished jobs....
Comment 1 Vincent Untz 2012-03-05 16:41:32 UTC
Created attachment 209014 [details] [review]
object: Fix build

Haven't try building with this yet, but this looks saner.
Comment 2 Colin Walters 2012-03-05 16:44:55 UTC
The commit message should say "with systemtap".

Umm...I see only whitespace changes in the patch.
Comment 3 Vincent Untz 2012-03-05 16:53:41 UTC
(In reply to comment #2)
> Umm...I see only whitespace changes in the patch.

A parenthesis moved too :-)
Comment 4 Vincent Untz 2012-03-05 16:54:44 UTC
Created attachment 209015 [details] [review]
object: Fix build with systemtap

It does fix the build, btw.
Comment 5 Colin Walters 2012-03-05 16:55:38 UTC
Review of attachment 209014 [details] [review]:

Oh I see.  Ok, if this patch works for you, please commit; thanks!

However to make a new tarball I'd have to temporarily revert the two changes I landed just after the release - I want them to "bake" a little bit in jhbuild.
Comment 6 Vincent Untz 2012-03-05 17:04:34 UTC
Comment on attachment 209015 [details] [review]
object: Fix build with systemtap

Patch works, pushed.
Comment 7 Vincent Untz 2012-03-05 17:05:07 UTC
For reference, I don't need a tarball as I'll use the patch for openSUSE. But other downstreams might want one, not sure...