object: Fix build with systemtap

https://bugzilla.gnome.org/show_bug.cgi?id=671390